# forex-research

./: .gitattributes  .gitignore  EXECUTION_PLAN.md  GIT_LFS_TROUBLESHOOTING.md  INSTALL_GIT_LFS.md  MANUAL_STEPS_2_3_4.md  NEXT_STEPS.md  QUICKSTART.md  QUICK_ADD_DATA.md  QUICK_FIX.md  README.md  README_DATA.md  pyproject.toml
archive/: ctrader_service.py
config/: strategies.example.json  strategies.json
docs/: CARRY_MOMENTUM_OPTIMIZATION_REPORT.md  COPY_DATA.md  DATA_DOWNLOAD_INSTRUCTIONS.md  DATA_IN_CLOUD.md  DATA_SETUP.md  ENCODING_FIX.md  FIND_PROJECT_PATH.md  GIT_BEST_PRACTICES.md  GIT_LFS_SETUP_STEPS.md  IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_AND_VISUALIZATION_PLAN.md  OPTIMIZATION_RESULTS_REPORT.md  PARALLELIZATION.md  PROJECT_JOURNAL.md  TRADE_VISUALIZATION.md  WHY_NOT_COMMIT_VENV.md  backtest_analysis_and_improvements.md  backtesting_metrics.md  data_pipeline_overview.md  execution_and_monitoring.md  final_improvement_report.md  momentum_breakout_fix.md  momentum_breakout_fix_report.md  pattern_strategies.md  pattern_testing_results.md  plan_execution_summary.md  risk_management_framework.md  strategy_development_process.md  strategy_governance.md  testing_validation_report.md
monitoring/: README.md  alerts.yaml  dashboard_config.yaml
research/: README.md
scripts/: add_data_to_git_lfs.sh  analyze_all_gaps.py  analyze_and_backfill_gaps.py  analyze_backtest_results.py  analyze_head_shoulders.py  analyze_losing_trades.py  analyze_optimization_results.py  backfill_ctrader_history.py  backfill_xauusd_missing.py  backfill_year_data.py  check_git_lfs_ready.sh  (+47 more)
(+91 files in other folders)
