[project]
name = "forex-research"
version = "0.1.0"
description = "Инструменты данных и исследования алгоритмических форекс-стратегий."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Quant Research Team" }]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.3",
    "numpy>=2.1.2",
    "scipy>=1.13.1",
    "mlflow>=2.16.2",
    "plotly>=5.24.1",
    "jupyterlab>=4.2.5",
    "prefect>=3.0.10",
    "typer>=0.12.4",
    "python-dotenv>=1.0.1",
    "ctrader-open-api==0.9.2",
    "service-identity>=23.1.0",
]

[project.optional-dependencies]
backtesting = ["backtrader>=1.9.78.123", "vectorbt>=0.26.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

